Changes done On 180923_8PM

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         Verifying!
     </p>
     <p>
-        Solve Conflict
+        Solve Conflict ------Resolved now
     </p>
+
 </head>
 <body>
 
